...

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Firstname"
            android:ems="10"
            android:id="@+id/first_name"
            android:layout_width="1dp"
            android:layout_weight="1" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Lastname"
            android:ems="10"
            android:id="@+id/last_name"
            android:layout_width="1dp"
            android:layout_weight="1" />
    </TableRow>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/add_info_courseName"
            android:hint="Course Taught"
            android:layout_weight="1" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.68" >

        <RadioButton
            android:text="Instructor"
            android:layout_height="wrap_content"
            android:id="@+id/instructor"
            android:layout_weight="1"
            android:layout_width="wrap_content" />

        <RadioButton
            android:text="TA"
            android:layout_height="wrap_content"
            android:id="@+id/teachingassistant"
            android:layout_weight="1"
            android:layout_width="wrap_content" />
    </TableRow>

        <RatingBar

...

            <RadioButton
                android:text="Very Accessible"
                android:textSize="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ezAccess" />

            <RadioButton
                android:text="Hardly Accessible"
                android:textSize="12dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:id="@+id/hardAccess"
                android:layout_width="wrap_content"
                android:layout_weight="0.73" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
...
            android:layout_weight="0.73" >

            <RadioButton
                android:text="Yes!"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yesButton1" />

            <RadioButton
                android:text="@string/No"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:id="@+id/noButton1"
                android:layout_width="wrap_content"
                android:layout_weight="0.73" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
...
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="Easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/diffButton1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="Mild"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/diffButton2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="Typical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/diffButton3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="Tough"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/diffButton4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="Unreasonable!"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/diffButton5" />
            </TableRow>

        </TableLayout>

        <Space
            android:layout_width="match_parent"
...
            android:layout_weight="0.73" >

            <RadioButton
                android:text="Yes!"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yesButton2" />

            <RadioButton
                android:text="@string/No"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:id="@+id/noButton2"
                android:layout_width="wrap_content"
                android:layout_weight="0.73" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
...

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/profComment"
                    android:layout_weight="0.15" />
            </LinearLayout>
        </ScrollView>

        <Space
            android:layout_width="match_parent"
...


        <Button
            android:text="@string/submit_review"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:id="@+id/submitBut"
            android:elevation="0dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_info_submitText"
            android:gravity="center"
            android:layout_weight="0.73" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
...
